<resources>
    <string name="app_name">Flashfetch Seller</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_sign_up">Flashfetch Seller</string>
    <string name="title_activity_start">Flashfetch Seller</string>

    <string name="title_activity_main">Flashfetch Seller</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_quote">FlashFetch Seller</string>

    <string name="action1">Contact Us</string>
    <string name="action2">Connect</string>
    <string name="action3">Share</string>
    <string name="action4">Update</string>

    <string name="account">My Account</string>
    <string name="helpimp">Help Us Improve</string>
    <string name="home">Home</string>
    <string name="notif">Notifications</string>
    <string name="notifalert">Notifications Alert</string>
    <string name="reqad">Request Ads</string>
    <string name="shopdet">Shop Details</string>
    <string name="inven">Inventory</string>
    <string name="feedback_title">Feedback</string>
    <string name="logout">Log Out</string>
    <string name="ret_pol">Returns Policy</string>
    <string name="SERVER_ERROR">server error</string>
    <string name="nav_refer">Invite &amp; Earn</string>
    <string name="title_activity_contact_us">ContactUs</string>
    <string name="title_activity_fill__address">Fill_Address</string>
    <string name="title_activity_wallet">Wallet</string>
    <string name="total_credit">Total Credit: ₹</string>
    <string name="invite_text">INVITE FRIENDS TO EARN MORE</string>
    <string name="message">Your friend will get ₹50 for downloading the app and you will receive... </string>
    <string name="chooser_title">Share Your Code</string>
    <string name="title_activity_refer_and_earn">ReferAndEarn</string>
    <string name="title_activity_account">Account</string>
    <string name="title_activity_address">Address</string>
    <string name="title_activity_verify_email">VerifyEmail</string>

    <!-- app urls-->

    <string name="google_play_app_url"><u>http://goo.gl/xnwC9V</u></string>

</resources>
