<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/account"
            android:icon="@drawable/acc"
            android:title="@string/account" />
        <item
            android:id="@+id/shopdet"
            android:title="@string/shopdet"
            android:icon="@drawable/shop_48"/>

        <item
            android:id="@+id/notif"
            android:icon="@drawable/notif"
            android:title="@string/notif" />
        <item
            android:id="@+id/reqad"
            android:icon="@drawable/reqad"
            android:title="@string/reqad" />

        <item
            android:id="@+id/rewardPoints"
            android:icon="@drawable/ic_wallet_black"
            android:title="Reward Points"/>

        <item
            android:id="@+id/referAndEarn"
            android:icon="@drawable/share"
            android:title="Refer and Earn"/>

        <item
            android:id="@+id/helpimp"
            android:icon="@drawable/helpimp"
            android:title="@string/helpimp" />

        <item
            android:id="@+id/demo"
            android:title="Demo"
            android:icon="@drawable/demo"/>

        <item
            android:id="@+id/logout"
            android:icon="@drawable/logout"
            android:title="@string/logout" />

    </group>

</menu>
