<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_menu_manage"
        android:title="@string/action1"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_action1"
        android:icon="@drawable/ic_menu_camera"
        android:title="@string/action2"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_action2"
        android:icon="@drawable/ic_menu_gallery"
        android:title="@string/action3"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_action3"
        android:icon="@drawable/ic_menu_send"
        android:title="@string/action4"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_action4"
        android:icon="@drawable/ic_menu_share"
        android:title="@string/action5"
        app:showAsAction="never" />
</menu>
