<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Wallet"
    tools:showIn="@layout/activity_wallet"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/layout_wallet"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:orientation="horizontal"
        android:background="#94999f"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:paddingTop="16dp"
        android:paddingRight="8dp"
        android:paddingBottom="16dp">
        <TextView
            android:text="@string/total_credit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/credit_amount"
            android:text="50"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <TextView
        android:layout_marginBottom="3dp"
        android:gravity="center"
        android:id="@+id/text_temp"
        android:text="@string/invite_text"
        android:layout_below="@+id/layout_wallet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/text_message"
        android:layout_below="@+id/text_temp"
        android:text="@string/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/wallet_share"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/text_message"
        android:text="SHARE"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/ff_green"
        android:textColor="#fff" />
</LinearLayout>
